InfraPlatform/grafana/v6/cf-grafana.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Amazon Grafana workspace stack V6
Parameters:
  VPCID:
    Description: VPC to create endpoints and workspace
    Type: AWS::EC2::VPC::Id
  AppSubnetIDs:
    Description: List of Subnet IDs to create Grafana workspace
    Type: List<AWS::EC2::Subnet::Id>
  AppShortName:
    Description: Application name
    Type: String
  EnvName:
    Description: Env Name
    Type: String
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-dev1
      - nprd-dev2
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c      
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c
  AuthProvider:
    Description: Authentication Provider (SAML/AWS_SSO)
    Type: String
    Default: AWS_SSO
    AllowedValues:
      - AWS_SSO
      - SAML
  VpcCidr1:
    Description: VPC CIDR 1 IP Range
    Type: String
  VpcCidr2:
    Description: VPC CIDR 2 IP Range
    Type: String
  VpcCidr3:
    Description: VPC CIDR 3 IP Range
    Type: String
  VpcCidr4:
    Description: VPC CIDR 4 IP Range
    Type: String
  VpcCidr5:
    Description: VPC CIDR 5 IP Range
    Type: String
  HCCVpceCidr:
    Description: HCC VPC Endpoint Subnet
    Type: String

  GrafanaVersion:
    Type: String
    Description: Grafana Docker image version

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasVpcCidr2: !Not [!Equals [!Ref VpcCidr2, '']]
  HasVpcCidr3: !Not [!Equals [!Ref VpcCidr3, '']]
  HasVpcCidr4: !Not [!Equals [!Ref VpcCidr4, '']]
  HasVpcCidr5: !Not [!Equals [!Ref VpcCidr5, '']]

Resources:
  PrefixListOfficeNetwork:
    Type: AWS::EC2::PrefixList
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      PrefixListName: !Sub ${AppShortName}-${EnvName}-pl-OfficeNetwork
      AddressFamily: "IPv4"
      MaxEntries: 10
      Entries:
        - Cidr: "34.87.130.0/24"
          Description: "Office SN Public"
        - Cidr: "54.254.116.150/32"
          Description: "HCC-AWS-FW NAT PIP-AZ2"
        - Cidr: "18.136.160.66/32"
          Description: "HCC-AWS-FW NAT PIP-AZ3"
        - Cidr: "57.140.27.199/32"
          Description: "HVPN-Menlo(SecureWebGateway)"
        - Cidr: "34.87.130.120/32"
          Description: "IHIS Public IP"                            
      Tags:
        - Key: "IaCVersion"
          Value: "InfraPlatform-grafana-V6"

# IAM Role
  AmazonGrafanaWorkspaceIAMRole:
    Type: 'AWS::IAM::Role'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - grafana.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      RoleName: !Sub ${AppShortName}-${EnvName}-grafana-role
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AWSXrayReadOnlyAccess
      Tags:
        - Key: "IaCVersion"
          Value: "InfraPlatform-grafana-V6"

  GrafanaCloudWatchPolicy:
    Type: 'AWS::IAM::Policy'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      PolicyDocument:
        Statement:
          - Sid: AllowReadingLogsFromCloudWatch
            Action:
              - "logs:DescribeLogGroups"
              - "logs:GetLogGroupFields"
              - "logs:StartQuery"
              - "logs:StopQuery"
              - "logs:GetQueryResults"
              - "logs:GetLogEvents"
            Effect: Allow
            Resource: "*"
          - Sid: AllowReadingMetricsFromCloudWatch
            Action:
              - "cloudwatch:DescribeAlarmsForMetric"
              - "cloudwatch:DescribeAlarmHistory"
              - "cloudwatch:DescribeAlarms"
              - "cloudwatch:ListMetrics"
              - "cloudwatch:GetMetricStatistics"
              - "cloudwatch:GetMetricData"
              - "cloudwatch:GetInsightRuleReport"
            Effect: Allow
            Resource: "*"
          - Sid: AllowReadingTagsInstancesRegionsFromEC2
            Action:
              - "ec2:DescribeTags"
              - "ec2:DescribeInstances"
              - "ec2:DescribeRegions"
            Effect: Allow
            Resource: "*"
          - Sid: AllowReadingResourcesForTags
            Action:
              - "tag:GetResources"
            Effect: Allow
            Resource: "*"
        Version: 2012-10-17
      PolicyName: !Sub ${AppShortName}-${EnvName}-grafana-CloudWatch-Policy
      Roles:
        - !Ref AmazonGrafanaWorkspaceIAMRole

# Security Group
  AmazonGrafanaWorkspaceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupDescription: Security Group for Amazon Grafana Workspace
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-grafana-workspace
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - SourcePrefixListId: !Ref PrefixListOfficeNetwork
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
      SecurityGroupEgress:
        - CidrIp: !Ref VpcCidr1
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          Description: Allow VPC CIDR Subnet
        - !If 
          - HasVpcCidr2
          - CidrIp: !Ref VpcCidr2
            IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            Description: Allow VPC CIDR Subnet
          - !Ref "AWS::NoValue"
        - !If 
          - HasVpcCidr3
          - CidrIp: !Ref VpcCidr3
            IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            Description: Allow VPC CIDR Subnet
          - !Ref "AWS::NoValue"
        - !If 
          - HasVpcCidr4
          - CidrIp: !Ref VpcCidr4
            IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            Description: Allow VPC CIDR Subnet
          - !Ref "AWS::NoValue"
        - !If 
          - HasVpcCidr5
          - CidrIp: !Ref VpcCidr5
            IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            Description: Allow VPC CIDR Subnet
          - !Ref "AWS::NoValue"
        - CidrIp: !Ref HCCVpceCidr
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          Description: HCC VPC Endpoint Subnet
      Tags:
        - Key: Name
          Value: !Sub '${AppShortName}-${EnvName}-sg-grafana-workspace'
        - Key: "IaCVersion"
          Value: "InfraPlatform-grafana-V6"

# Grafana Workspace
  AmazonGrafanaWorkspace:
    Type: 'AWS::Grafana::Workspace'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AccountAccessType: CURRENT_ACCOUNT
      Name: !Sub ${AppShortName}-${EnvName}-grafana
      Description: Amazon Grafana Workspace
      PermissionType: CUSTOMER_MANAGED
      RoleArn: !GetAtt AmazonGrafanaWorkspaceIAMRole.Arn
      GrafanaVersion: !Ref GrafanaVersion
      NetworkAccessControl:
        PrefixListIds:
          - !Ref PrefixListOfficeNetwork
#        VpceIds:
#          - !Ref VPCInterfaceEndpointGrafanaWorkspace
      AuthenticationProviders:
        - !Ref AuthProvider
      VpcConfiguration:
        SecurityGroupIds:
          - !GetAtt AmazonGrafanaWorkspaceSecurityGroup.GroupId
        SubnetIds: !Ref AppSubnetIDs
      PluginAdminEnabled: true
